Bug 81913 - Navigating with arrow keys disables cell highlighting (in text and in spreadsheet)
Summary: Navigating with arrow keys disables cell highlighting (in text and in spreads...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: low minor
Assignee: Andreas Heinisch
URL:
Whiteboard: target:25.2.0
Keywords:
: 113902 (view as bug list)
Depends on:
Blocks: Cell-Formula
  Show dependency treegraph
 
Reported: 2014-07-30 13:32 UTC by fuer_kommentare
Modified: 2024-12-07 13:03 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description fuer_kommentare 2014-07-30 13:32:54 UTC
In Calc, when selecting a cell for editing with a Formula in it (like "= A3 * B4") with double-clicking it, the referenced cells get highlighted (since 4.3 with nice colors :)).

But when then using the arrow keys on the keyboard to naviugate the input cursor, the hightlighting goes off and the cells are just non-highlighted cells and the text is black again.

Would be nice if the highlighting stays on as long as the cell with the formula is active. Because the highlighting is especially useful when changing the formula (-> moving the input cursor) and not only when viewing it.

(I'd even like it more, when the highlighting goes on as soon as the cell with the formula is selected with a single click, not only when it is being made active for editing with a double-click, but that just as a sidenote)
Comment 1 A (Andy) 2014-07-30 20:28:18 UTC
reproducible with LO 4.3.0.4 (Win 8.1)

I would agree.  I also think this is a bug and not an enhancement.
Comment 2 QA Administrators 2015-09-04 02:48:39 UTC Comment hidden (obsolete)
Comment 3 Buovjaga 2015-11-19 12:23:01 UTC
Still repro.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 66d2b72667792cb18b25805387824d636e2a455c
TinderBox: Win-x86@39, Branch:master, Time: 2015-11-18_02:35:53
Locale: fi-FI (fi_FI)
Comment 4 Robinson Tryon (qubit) 2015-12-10 07:26:34 UTC Comment hidden (obsolete)
Comment 5 QA Administrators 2018-07-16 02:41:50 UTC Comment hidden (obsolete)
Comment 6 QA Administrators 2021-10-22 03:46:03 UTC Comment hidden (obsolete)
Comment 7 Kira Tubo 2023-09-24 01:46:21 UTC
*** Bug 113902 has been marked as a duplicate of this bug. ***
Comment 8 Kira Tubo 2023-09-24 01:47:24 UTC
Reproduced in daily master build

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 486ae5db6987411d5e394de94b2b077099d03856
CPU threads: 6; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 9 Kira Tubo 2023-09-24 01:48:59 UTC
Also reproduced on 3.3
Comment 10 Commit Notification 2024-11-18 07:44:07 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/671886c569a35e691ff3a1b2e60816f75ec223ce

tdf#81913 - Keep cell highlighting active during arrow key navigation

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.