tdf#81913 - Keep cell highlighting active during arrow key navigation

Don't delete range finder during arrow key navigation since cursor keys
don't count as modifications.

Change-Id: I53566a4a84ff4dc81fdf0d8b8f6468f956958925
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/176689
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
Tested-by: Jenkins