sc/source/ui/app/inputhdl.cxx
@@ -4062,7 +4062,10 @@ bool ScInputHandler::KeyInput( const KeyEvent& rKEvt, bool bStartEdit /* = false
 
             // #i114511# don't count cursor keys as modification
             bool bSetModified = !bCursorKey;
+            // tdf#81913 - don't delete range finder since cursor keys don't count as modifications
+            bInRangeUpdate = bCursorKey;
             DataChanged(false, bSetModified); // also calls UpdateParenthesis()
+            bInRangeUpdate = false;
 
             // In the LOK case, we want to set the document modified state
             // right away at the start of the edit, so that the content is
